// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Json Form component Render invisible condition is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" value="{
  &quot;a&quot;: &quot;b&quot;
}" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <!----></div></span>
`;

exports[`Json Form component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Json Form component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Json Form component Render invisible is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" value="{
  &quot;a&quot;: &quot;b&quot;
}" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <!----></div></span>
`;

exports[`Json Form component Render label 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">The label</label> <textarea rows="1" value="{
  &quot;a&quot;: &quot;b&quot;
}" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <!----></div></span>
`;

exports[`Json Form component Render mode readonly by config 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Form component Render mode readonly conditional param 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Form component Render mode readonly param 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Form component Render placeholder 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea placeholder="The placeholder" rows="1" value="" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <p class="help is-danger">Invalid JSON format</p></div></span>`;

exports[`Json Form component Render required 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" value="{
  &quot;a&quot;: &quot;b&quot;
}" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <!----></div></span>
`;

exports[`Json Form component Render required conditionnal 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" value="{
  &quot;a&quot;: &quot;b&quot;
}" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <!----></div></span>
`;

exports[`Json Form component Render required without value 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" value="" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <p class="help is-danger">Invalid JSON format</p></div></span>`;

exports[`Json Form component Render tooltip left 1`] = `
<span data-label="The left tooltip" data-server-rendered="true" class="tooltip is-primary is-left is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" value="{
  &quot;a&quot;: &quot;b&quot;
}" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <!----></div></span>
`;

exports[`Json Form component Render tooltip up 1`] = `
<span data-label="The tooltip" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" value="{
  &quot;a&quot;: &quot;b&quot;
}" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <!----></div></span>
`;

exports[`Json Form component Render with data 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" value="{
  &quot;a&quot;: &quot;b&quot;
}" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <!----></div></span>
`;

exports[`Json Form component Render without data 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" value="" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <p class="help is-danger">Invalid JSON format</p></div></span>`;

exports[`Json Thumbnail component Render invisible condition is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Json Thumbnail component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Json Thumbnail component Render invisible is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render label 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">The label</label> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render tooltip left 1`] = `
<span data-label="The left tooltip" data-server-rendered="true" class="tooltip is-primary is-left is-medium"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render tooltip up 1`] = `
<span data-label="The tooltip" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render with data 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render without data 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;"></pre> <!----></div></span>`;

exports[`Json list component Render invisible condition is false 1`] = `
<pre data-server-rendered="true" style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre>
`;

exports[`Json list component Render invisible condition is true 1`] = `<span data-server-rendered="true"></span>`;

exports[`Json list component Render invisible is True 1`] = `<span data-server-rendered="true"></span>`;

exports[`Json list component Render invisible is false 1`] = `
<pre data-server-rendered="true" style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre>
`;

exports[`Json list component Render with data 1`] = `
<pre data-server-rendered="true" style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre>
`;

exports[`Json list component Render without data 1`] = `<pre data-server-rendered="true" style="width:100%;padding:2;background-color:white;"></pre>`;
